--- a/index copy.html
+++ b/index copy.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title></title>
+    <title>📻</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="title">
-      <h1></h1>
+      <h1>📻</h1>
     </div>
     <div class="wrapper">
       <div id="chat" class="chat">
